# fanwallet-frontier

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  DEPLOY.md  README.md  SESSION_STARTUP.md  index.html  logo-export.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
api/: worldid-sign.ts
desing made by claude design/fanwallet-frontier-app-ui/: README.md
desing made by claude design/fanwallet-frontier-app-ui/project/: .design-canvas.state.json  FanWallet Frontier.html  brand.jsx  icons.jsx  marketing.jsx  screens-a.jsx  screens-b.jsx  styles.css
migrations/: deploy.ts
programs/fanwallet/: Cargo.toml
programs/fanwallet/src/: lib.rs
public/: manifest.json
src/: App.tsx  index.css  main.tsx  polyfill.ts
src/components/: LogoMark.tsx  RolePicker.tsx
src/components/business/: Analytics.tsx  BizApp.tsx  BizDashboard.tsx  BizOnboarding.tsx  BizReviews.tsx  Deals.tsx  POSMode.tsx  SideNav.tsx
src/components/fan/: BottomNav.tsx  Dashboard.tsx  Deposit.tsx  FanAgent.tsx  FanApp.tsx  FanProfile.tsx  GoalPoints.tsx  LeaveReview.tsx  MerchantInsights.tsx  MerchantMap.tsx  MerchantProfile.tsx  MoonPayAgent.tsx  Onboarding.tsx  PayQR.tsx  Send.tsx  SmartWallet.tsx  Splash.tsx  Split.tsx  Stamps.tsx  VanishPayment.tsx  WorldIDVerify.tsx
src/hooks/: useIsDesktop.ts
src/lib/: appContext.tsx  idl.ts  mockData.ts  solana.ts  wallet.tsx
