[package]
name = "fanwallet"
version = "0.1.0"
description = "FanWallet Frontier — FIFA World Cup 2026 on-chain payments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fanwallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
